# img-edit-agent

./: .env.example  .gitignore  0.2.27  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: README.md  deploy-api.yml  test-frontend.yml  test-nextjs.yml
.husky/: pre-commit
api/: .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_CONNECTION_SOLUTION.md  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  generate-lock.sh  pyproject.toml  pytest.ini  run.sh  test_db_connection.py
api/img_edit_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/llm/: agent.py  chain.py  connection_manager.py  prompt.py  tools.py  utils.py
api/llm/database/: __init__.py
api/server/: main.py
api/tests/: README.md  __init__.py  test_agent.py  test_api.py  test_db_connection.py  test_utils.py
src/app/: action.ts  layout.tsx  page.tsx
src/lib/: actions.test.ts  actions.ts  definition.ts  types.ts
src/ui/: chat-interface.tsx  examples-dropdown.tsx  global.css  image-card.tsx  image-preview.test.tsx  image-preview.tsx  prompt-input.tsx
